QA_Ipreo/src/objects/Product_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_First_Expressed__c</fullName>
        <label>Date First Expressed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Interest__c</fullName>
        <label>Level of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Interest</relationshipLabel>
        <relationshipName>Product_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Interest</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Product Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>